# opa-testing

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.test  Makefile  README.md  SUMMARY.md  TESTING.md  TROUBLESHOOTING.md  WINDOWS_TESTING_GUIDE.md  config.example.yaml  docker-compose.yml  manage.py  mock_opa_server.py  pyproject.toml  requirements.txt  run_local_test.py  test_cli_simple.py  test_local.py
.github/: dependabot.yml
.github/workflows/: deploy.yml  scheduled.yml  test.yml
docs/: architecture.md  ci-cd.md  cli-reference.md  configuration.md  getting-started.md  index.md  troubleshooting.md  writing-tests.md
examples/: README.md
examples/policies/: example.rego  example_test.rego
scripts/: quick-start.sh
src/opa_test_framework/: __init__.py  cli.py  client.py  config.py  exceptions.py  models.py  results.py  runner.py
src/opa_test_framework/categories/: __init__.py  auth.py  base.py  bundle.py  health.py  policy.py
src/opa_test_framework/reporting/: __init__.py  base.py  console.py  json_reporter.py  junit.py
tests/: __init__.py  test_categories_auth.py  test_categories_bundle.py  test_categories_health.py  test_categories_policy.py  test_cli.py  test_client.py  test_client_extended.py  test_config.py  test_config_extended.py  test_exceptions.py  test_models.py  test_reporters.py  test_results.py  test_runner.py
